fix span spacing for mobile-large and screens larger

--- a/src/Components/AudiophileDescription/AudiophileDescription.scss
+++ b/src/Components/AudiophileDescription/AudiophileDescription.scss
@@ -119,3 +119,13 @@ span {
     font-size: 4rem;
   }
 }
+
+@include mobile-small {
+  br {
+    display: none;
+
+    @include tablet-small {
+      display: block;
+    }
+  }
+}
